--- a/style.css
+++ b/style.css
@@ -1,77 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&family=Poppins:wght@400;500;600;700&display=swap');
+@import "./css/global.css";
+@import "./css/header.css";
+@import "./css/introduce.css";
+@import "./css/experience.css";
+@import "./css/skills.css";
+@import "./css/education.css";
+@import "./css/contacts.css";
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-}
-
-:root {
-    --primary-color: #7100EA;
-    --gradient-line: linear-gradient(90deg, #8100EA, #43008A);
-    --gradient-column: linear-gradient(#8100EA, #43008A);
-    --gray-n1: #F0F0F0;
-    --gray-n2: #D6D6D6;
-    --gray-n3: #B3B3B3;
-    --gray-n4: #8F8F8F;
-    --gray-n5: #6B6B6B;
-    --gray-n6: #474747;
-    --gray-n7: #363636;
-    --gray-n8: #242424;
-    --gray-n9: #121212;
-    font-size: 62.5%;
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-body {
-    font-family: 'Montserrat', sans-serif;
-    position: relative;
-}
-
-ul {
-    list-style: none;
-}
-
-img {
-    max-width: 100%;
-}
-
-header,
-.wrapper {
-    padding-inline: 10%; 
-}
-
-main {
-    display: grid;
-    padding-top: 9rem;
-}
-
-section .wrapper {
-    padding-block: 12rem;
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    align-items: center;
-    gap: 10%;
-}
-
-h2 {
-    font-size: 12.8rem;
-    line-height: 12.8rem;
-    text-transform: uppercase;
-    word-break: break-all;
-    max-width: 36rem;
-}
-
-p {
-    font-family: 'poppins', sans-serif;
-}
-
-/* ============= BACK UP BUTTON  ================================================================== */
-#backUpButton {
+/* ============= BACK TO TOP BUTTON  ===========================*/
+#backToTopButton {
     position: fixed;
     bottom: -6rem;
     right: 1rem;
@@ -81,526 +17,7 @@ p {
     border-radius: 100%;
 }
 
-#backUpButton.scroll {
+#backToTopButton.scroll {
     display: block;
     transform: translateY(-6.5rem);
-}
-
-/* ============= HEADER ================================================================== */
-#navigation {
-    position: fixed;
-    z-index: 1;
-    padding-block: 3rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    background-color: #fff;
-}
-
-#navigation.scroll {
-    box-shadow: 0 1px 20px rgba(0, 0, 0, 0.2);
-}
-
-#navigation .menu .menu-container {
-    display: flex;
-    gap: 4rem;
-}
-
-#navigation .menu .menu-container a {
-    color: var(--gray-n7);
-    font-size: 2rem;
-    font-weight: 500;
-    transition: color 400ms;
-    height: 100%;
-}
-
-#navigation .menu .menu-container li a:hover {
-    color: var(--primary-color);
-}
-
-#navigation .menu .menu-container li a::after {
-    content: '';
-    width: 0%;
-    height: .2rem;
-    background-color: var(--primary-color);
-    display: block;
-    transition: width 300ms;
-}
-
-#navigation .menu .menu-container li a:hover::after {
-    width: 100%;
-}
-
-/* ============= SECTION PRESENTATION ================================================================== */
-#presentation .photo {
-    max-width: 36rem;
-}
-
-#presentation .technologies {
-    display: flex;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-}
-
-#presentation .content-title h1{
-    color: var(--gray-n9);
-    font-size: 7.2rem;
-    font-weight: 700;
-    position: relative;
-}
-
-#presentation .content-title h1::after {
-    content: "";
-    position: absolute;
-    width: 11rem;
-    height: 1rem;
-    bottom: 0;
-    left: 0;
-    background-image: var(--gradient-line);
-}
-
-#presentation .social-links ul {
-    display: flex;
-    gap: 2rem;
-    margin-top: 5rem ;
-}
-
-#presentation .social-links ul img {
-    width: 4.4rem ;
-}
-
-/* ============= SECTION EXPERIENCE ================================================================== */
-#experience .section-title h2 {
-    color: var(--gray-n3);
-}
-
-#experience .section-content {
-    display: grid;
-    gap: 6rem;
-}
-
-#experience .section-content > p {
-    font-size: 2.4rem;
-}
-
-#experience .section-content > p span {
-    font-weight: 700;
-}
-
-#experience .content-container {
-    display: grid;
-    gap: 2rem;
-}
-
-#experience .content-container .experience-container {
-    background-color: var(--gray-n1);
-    padding: 1rem;
-    border-radius: .5rem;
-    position: relative;
-    display: grid;
-    gap: 1rem;
-}
-
-#experience .experience-container span {
-    font-family: 'poppins', sans-serif;
-    position: absolute;
-    right: calc(100% + 2rem);
-    top: .9rem;
-    font-size: 1.6rem;
-    font-weight: 500;
-    color: var(--gray-n6);
-    width: max-content;
-}
-
-#experience .experience-container .experience-title {
-    display: flex;
-    justify-content: space-between;
-    color: var(--gray-n8);
-}
-
-#experience .experience-container .experience-title h3 {
-    font-size: 1.8rem;
-}
-
-#experience .experience-container .experience-content {
-    display: flex;
-    justify-content: space-between;
-    gap: 2.7rem;
-}
-
-#experience .experience-container .experience-content .experience-description p {
-    font-size: 1.6rem;
-    color: var(--gray-n7);
-    font-weight: 500;
-    max-width: 55ch;
-}
-
-#experience .experience-container .experience-content .experience-technologies {
-    display: flex;
-    align-items: baseline;
-    flex-wrap: wrap;
-    gap: 1rem;
-}
-
-#experience .experience-container .experience-content .experience-technologies li {
-    font-size: 1.6rem;
-    font-weight: 500;
-    color: #fff;
-    padding: .6rem 1.2rem;
-    background-color: var(--primary-color);
-    border-radius: .5rem;
-}
-
-/* ============= HEADER ================================================================== */
-#skills {
-    position: relative;
-}
-
-#skills::before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    background-color: var(--gray-n9);
-    z-index: -1;
-}
-
-#skills .wrapper {
-    padding-block: 12rem;
-
-}
-
-#skills .section-title h2 {
-    color: #000;
-    text-shadow: 0 1rem 1rem #000;
-}
-
-#skills .section-content {
-    display: grid;
-    gap: 6rem;
-}
-
-#skills .section-content > p {
-    font-size: 2.4rem;
-    color: #fff;
-}
-
-#skills .section-content > p span {
-    color: var(--primary-color);
-    font-weight: 700;
-}
-
-#skills .skills-container {
-    display: grid;
-    gap: 4rem;
-}
-
-#skills .skills-container .skills {
-    display: grid;
-    gap: 2rem;
-}
-
-#skills .skills-container .skills .skills-title {
-    position: relative;
-}
-
-#skills .skills-container .skills .skills-title::before {
-    position: absolute;
-    content: "";
-    top: .8rem;
-    left: -2rem;
-    width: .8rem;
-    height: .8rem;
-    border: 2px solid var(--primary-color);
-    border-radius: 50%;
-}
-
-#skills .skills-container .skills .skills-title h3 {
-    font-size: 2.4rem;
-    font-weight: 700;
-    color: #fff;
-    text-transform: uppercase;
-}
-
-#skills .skills-container .skills .skills-card {
-    background-color: var(--gray-n8);
-    border-radius: .5rem;
-    padding: 2rem;
-    font-weight: 700;
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    justify-content: space-between;
-    gap: 2rem;
-}
-
-#skills .skills-container .skills .skills-card .skill,
-#skills .skills-container .skills .skills-card .skill h4 {
-    color: var(--gray-n2);
-    font-size: 2rem;
-    max-width: 10ch;
-}
-
-#skills .skills-container .skills .skills-card .skill p {
-    color: var(--gray-n4);
-    font-size: 1.8rem;
-}
-
-/* ============= SECTION EDUCATION ================================================================== */
-#education .section-title h2 {
-    color: var(--gray-n3);
-}
-
-#education .section-content,
-#education .education-container {
-    display: grid;
-    gap: 6rem;
-    position: relative;
-}
-
-#education .section-content::before {
-    content: '';
-    width: 13px;
-    height: 13px;
-    left: -.8rem;
-    top: -.6rem;
-    background-image: url("./assets/icons/decoration.svg");
-    position: absolute;
-}
-
-#education .section-content::after {
-    content: '';
-    width: 13px;
-    height: 13px;
-    right: -.8rem;
-    bottom: -.6rem;
-    background-image: url("./assets/icons/decoration2.svg");
-    background-size: cover;
-    position: absolute;
-}
-
-#education .section-content > p {
-    font-size: 2.4rem;
-}
-
-#education .section-content > p span {
-    color: var(--primary-color);
-    font-weight: 700;
-}
-
-#education .academy-container {
-    display: flex;
-    gap: 2rem;
-}
-
-#education .academy-container .academy-card {
-    background-color: var(--gray-n9);
-    border-radius: .5rem;
-    padding: 1rem;
-    width: 20rem;
-    box-shadow: 0 .2rem .1rem #00000080;
-    position: relative;
-}
-
-#education .academy-container .academy-card::before {
-    content: '';
-    width: .4rem;
-    height: 2rem;
-    top: 4.8rem;
-    left: -.4rem;
-    border-radius: .2rem 0 0 .2rem;
-    background-image: var(--gradient-column);
-    position: absolute;
-}
-
-#education .academy-container .academy-card .type {
-    color: var(--gray-n3);
-    font-size: 1.8rem;
-}
-
-#education .academy-container .academy-card .title {
-    color: var(--gray-n1);
-    font-size: 2.4rem;
-    margin-top: 1rem;
-    margin-bottom: .5rem;
-}
-
-#education .academy-container .academy-card .date {
-    color: var(--gray-n4);
-    font-size: 1.4rem;
-}
-
-#education .academy-container .academy-card .college {
-    color: var(--gray-n2);
-    font-size: 1.8rem;
-    margin-top: 5rem;
-}
-
-#education .courses-container {
-    display: grid;
-    gap: 3rem;
-}
-
-#education .courses-container .courses-title h3 {
-    font-size: 1.6rem;
-    color: var(--gray-n4);
-    font-weight: 700;
-    text-transform: uppercase;
-}
-
-#education .courses-container .courses-content {
-    display: grid;
-    gap: 2rem;
-}
-
-#education .courses-container .courses-content .course {
-    display: grid;
-    gap: .5rem;
-}
-
-#education .courses-container .courses-content .course .course-description {
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-}
-
-#education .courses-container .courses-content .course .course-description::after {
-    content: '';
-    width: 100%;
-    height: .1rem;
-    bottom: 0;
-    background-color: var(--gray-n2);
-    position: absolute;
-}
-
-#education .courses-container .courses-content .course .course-description .name {
-    font-size: 1.8rem;
-    color: var(--gray-n7);
-    font-weight: 500;
-}
-
-#education .courses-container .courses-content .course .course-description .workload {
-    font-size: 1.6rem;
-    color: var(--gray-n5);
-    font-weight: 500;
-}
-
-#education .courses-container .courses-content .course .course-college {
-    font-size: 1.4rem;
-    font-weight: 500;
-    color: var(--gray-n5);
-}
-
-/* ============= SECTION CONTACT ================================================================== */
-#contacts {
-    position: relative;
-}
-
-#contacts::before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    z-index: -1;
-}
-
-#contacts .wrapper {
-    padding-block: 12rem;
-}
-
-#contacts .section-title h2 {
-    color: var(--gray-n8);
-}
-
-#contacts .section-content {
-    display: grid;
-    gap: 4rem;
-    position: relative;
-}
-
-#contacts .section-content::before {
-    content: '';
-    width: 13px;
-    height: 13px;
-    right: -.8rem;
-    top: -.6rem;
-    background-image: url("./assets/icons/decoration3.svg");
-    position: absolute;
-}
-
-#contacts .section-content::after {
-    content: '';
-    width: 13px;
-    height: 13px;
-    right: -.8rem;
-    bottom: -.6rem;
-    background-image: url("./assets/icons/decoration2.svg");
-    position: absolute;
-}
-
-#contacts .section-content h3 {
-    color: var(--gray-n1);
-    font-size: 2.4rem;
-}
-
-#contacts .contacts-container {
-    display: grid;
-    gap: 3rem;
-}
-
-#contacts .contacts-container .contact {
-    position: relative;
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-}
-
-#contacts .contacts-container .contact img {
-    position: absolute;
-    left: -3rem;
-}
-
-#contacts .contacts-container .contact p {
-    color: var(--gray-n2);
-    font-size: 2rem;
-}
-
-#contacts .social-links {
-    display: grid;
-    gap: 1.5rem;
-}
-
-#contacts .social-links h4 {
-    color: var(--gray-n5);
-    font-weight: 700;
-    font-size: 1.8rem;
-}
-
-#contacts .social-links .links {
-    display: flex;
-    gap: 2.4rem;
-}
-
-#contacts  .social-links .links a img {
-    width: 3.2rem;
-}
-
-@media (max-width: 1240px) {
-    :root {
-        font-size: 56.25%;
-    }
-
-    header,
-    .wrapper {
-        padding-inline: 5%;
-    }
-
-    #navigation {
-        padding-block: 3rem;
-    }
-
-    #navigation .logo img {
-        height: 4.48rem;
-    }
 }
