--- a/css/contacts.css
+++ b/css/contacts.css
@@ -22,7 +22,7 @@
     height: 13px;
     right: -.8rem;
     top: -.6rem;
-    background-image: url("./assets/icons/decoration3.svg");
+    background-image: url("../assets/icons/decoration3.svg");
     position: absolute;
 }
 
@@ -32,7 +32,7 @@
     height: 13px;
     right: -.8rem;
     bottom: -.6rem;
-    background-image: url("./assets/icons/decoration2.svg");
+    background-image: url("../assets/icons/decoration2.svg");
     position: absolute;
 }
 
