--- a/css/education.css
+++ b/css/education.css
@@ -15,7 +15,7 @@
     height: 13px;
     left: -.8rem;
     top: -.6rem;
-    background-image: url("./assets/icons/decoration.svg");
+    background-image: url("../assets/icons/decoration.svg");
     position: absolute;
 }
 
@@ -25,7 +25,7 @@
     height: 13px;
     right: -.8rem;
     bottom: -.6rem;
-    background-image: url("./assets/icons/decoration2.svg");
+    background-image: url("../assets/icons/decoration2.svg");
     background-size: cover;
     position: absolute;
 }
