--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&family=Poppins:wght@400;500;600;700&display=swap');
-
 * {
     margin: 0;
     padding: 0;
@@ -83,4 +81,20 @@ h2 {
     text-transform: uppercase;
     word-break: break-all;
     max-width: 36rem;
+}
+
+/* ============= BACK TO TOP BUTTON  ===========================*/
+#backToTopButton {
+    position: fixed;
+    bottom: -6rem;
+    right: 1rem;
+    transition: 600ms;
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+    border-radius: 100%;
+}
+
+#backToTopButton.scroll {
+    display: block;
+    transform: translateY(-6.5rem);
 }
